Remove Alias feature and related code
Deleted the Alias class and removed all references to it in MineverseChat and CommandListener. This change eliminates the command alias functionality, likely for simplification or deprecation.